<resources>
    <string name="app_name">QuanLyKhachSan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_customer">Khách Hàng</string>
    <string name="menu_room">Phòng</string>
    <string name="menu_hire">Thuê Phòng</string>
    <string name="menu_staff">Nhân Viên</string>
    <string name="menu_service">Dịch Vụ</string>
    <string name="menu_paymentInvoice">Hoá Đơn tiền dịch vụ</string>
    <string name="menu_billRoom">Hoá Đơn tiền phòng</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_password">Change Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="data">
        <item>Đã được thuê</item>
        <item>Chưa được thuê</item>

    </array>
    <array name="gender">
        <item>Nam</item>
        <item>Nữ</item>
    </array>
</resources>