<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/customer"
            android:title="@string/menu_customer"
            />
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/staff"
            android:title="@string/menu_staff" />
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/room"
            android:title="@string/menu_room" />
        <item
            android:id="@+id/nav_hire"
            android:icon="@drawable/note"
            android:title="@string/menu_hire" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/note"
            android:title="@string/menu_service" />

        <item
            android:id="@+id/nav_paymentInvoice"
            android:icon="@drawable/invoice"
            android:title="@string/menu_paymentInvoice"/>
        <item
            android:id="@+id/nav_billRoom"
            android:icon="@drawable/invoice"
            android:title="@string/menu_billRoom"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account"
            android:title="@string/menu_profile"/>

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/change_password"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_logout"/>
    </group>
</menu>